[project]
name = "zhipin-geek"
version = "0.1.1"
description = "BOSS 直聘求职端 CLI — 搜索职位、查看消息、发送简历、交换联系方式"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "duanxiaowen", email = "duanxiaowen@example.com" }]
keywords = ["boss", "zhipin", "cli", "terminal", "job", "geek"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx[socks]>=0.27",
    "browser-cookie3>=0.19",
    "qrcode>=7.0",
    "paho-mqtt>=1.6,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11.0",
]
yaml = [
    "pyyaml>=6.0",
]
browser = [
    "camoufox>=0.4",
]

[project.urls]
Homepage = "https://github.com/DuanXiaoWen/zhipin-geek"
Repository = "https://github.com/DuanXiaoWen/zhipin-geek"
Issues = "https://github.com/DuanXiaoWen/zhipin-geek/issues"

[project.scripts]
geek = "boss_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["boss_cli"]

[tool.pytest.ini_options]
markers = [
    "smoke: end-to-end tests requiring live cookies (deselect with '-m \"not smoke\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 140
